# ecto_talk

./: .gitignore  CMakeLists.txt  Makefile  being_used_for.txt  calibrator.py  colorize_clusters.py  dependencies.txt  dotalk.py  emit.py  ex00.py  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  generate_executionplot.py  highlight.py  kinect_colorize.py  kinect_standalone.py  kinect_view.py  kinect_voxelgrid.py  loc.py  loc.txt  main.tex  makegraph.py  meh.py  noop.py  notes.tex  poseestimator.py  preamble.tex  printinput.py  printinput2.py  printy.py  rounder.py  runslides.py  splash.txt  talk.sh  walkthrough.py  webcam.py  (+6 more)
latex/: CMakeLists.txt  abstract.txt  beamerthemeresophonic.sty  gen_execution_imgs.py  main.bak.tex  meh.py  overhead.tex  test_addergraph_movies.py
slides/: asciipoint.py  colorize_clusters_txt.py  comparison.py  comparison.txt  contact.notes.txt  contact.py  contact.txt  couleur.py  emit_txt.py  hl.py  kinect_standalone_txt.py  kinect_view.notes.txt  kinect_view.py  kinect_view.txt  kinect_view_txt.py  kinect_voxelgrid_txt.py  noop_txt.py  poseestimator.py  poseestimator.txt  printinput2_txt.py  printinput_txt.py  printy_txt.py  splash.notes.txt  splash.py  splash.txt  talkstyle.py  webcam.py  webcam.txt  webcam_circles.py  webcam_circles.txt  webcam_circles_txt.py  webcam_fps.py  webcam_fps.txt  webcam_fps_txt.py  webcam_grey.notes.txt  webcam_grey.py  webcam_grey.txt  webcam_grey_txt.py  webcam_pose.notes.txt  webcam_pose.py  (+4 more)
src/: CMakeLists.txt  PrintInput2.cpp  emit.cpp  module.cpp  noop.cpp  printinput.cpp  printinput2.cpp  printy.cpp  (+1 more)
